--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,14 +1,19 @@
+<!-- src/app/app.html -->
+
 <!-- If user is logged out: show Auth landing -->
 <ng-container *ngIf="(auth.user$ | async) === null; else loggedIn">
-  <app-auth></app-auth>
+  <!-- Direct login button instead of app-auth -->
+  <button mat-raised-button color="primary" (click)="auth.login()">
+    Login with Google
+  </button>
 </ng-container>
 
 <!-- If logged in: show toolbar + your user table -->
 <ng-template #loggedIn>
   <mat-toolbar color="primary">
-     <span style="display: block; text-align: center; color: black; font-weight: bold; font-size: 20px;">
-    User Management
-  </span>
+    <span style="display: block; text-align: center; color: black; font-weight: bold; font-size: 20px;">
+      User Management
+    </span>
     <span style="flex:1"></span>
     <button mat-button (click)="auth.logout()">Logout</button>
   </mat-toolbar>
