--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
 
 <!-- If user is logged out: show Auth landing -->
 <ng-container *ngIf="(auth.user$ | async) === null; else loggedIn">
-  <!-- Direct login button instead of app-auth -->
+  <!-- Direct login button -->
   <button mat-raised-button color="primary" (click)="auth.login()">
     Login with Google
   </button>
